--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "node_modules/normalize.css/normalize.css",
               "src/sass/styles.scss",
-              "src/sass/theme.scss"
+              "src/sass/theme.scss",
+              "../node_modules/font-awesome/css/font-awesome.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/", "src/sass/"]
@@ -80,7 +81,8 @@
             "styles": [
               "node_modules/normalize.css/normalize.css",
               "src/sass/styles.scss",
-              "src/sass/theme.scss"
+              "src/sass/theme.scss",
+              "../node_modules/font-awesome/css/font-awesome.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/", "src/sass/"]
