--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "^6.1.0",
     "angular-material": "^1.1.12",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "ngx-gallery": "^5.9.1",
     "normalize.css": "^8.0.1",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.4.0",
