--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "node_modules/normalize.css/normalize.css",
               "src/sass/styles.scss",
               "src/sass/theme.scss",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/", "src/sass/"]
@@ -82,7 +82,7 @@
               "node_modules/normalize.css/normalize.css",
               "src/sass/styles.scss",
               "src/sass/theme.scss",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/", "src/sass/"]
