--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-gallery": "^5.9.1",
+    "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "rxjs": "6.0.0",
     "rxjs-compat": "^6.4.0",
